# phd-cluster-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  TODO  cookiecutter.schema.json  index.html  mkdocs.yaml  schema.json  sitemap.xml
.github/: .commitlintrc.mjs
cluster/: index.html
cluster-template/: cookiecutter.json  cookiecutter.schema.json
docs/: CNAME  README.md  index.md
infrastructure/: index.html
instance-template/: cookiecutter.json  extensions.py
instances/: index.html
manifests/: argo-server-auth.yml  argo-user-admin-role.yml  argo-user-bindings.yml  argo-user-developer-role.yml  argo-user-readonly-role.yml  argo-user-token-secret.yml  argo-workflows-ingress.yml  argocd-admin-password.yml  argocd-base-config.yml  argocd-ingress.yml  argocd-rbac-config.yml  openedx-instance-rbac.yml  phd-mongodb-deprovision-template.yml  phd-mongodb-deprovision-workflow.yml  phd-mongodb-provision-template.yml  phd-mongodb-provision-workflow.yml  phd-mysql-deprovision-template.yml  phd-mysql-deprovision-workflow.yml  phd-mysql-provision-template.yml  phd-mysql-provision-workflow.yml  phd-mysql-template.yml  phd-storage-deprovision-template.yml  phd-storage-deprovision-workflow.yml  phd-storage-provision-template.yml  phd-storage-provision-workflow.yml  workflow-executor-token.yml
requirements/: base.txt
scripts/: README.md  bootstrap-instance.sh  create-instance.sh  create-user.sh  delete-instance.sh  delete-user.sh  example-config-generation.sh  install-argo-workflows.sh  install-argocd.sh  phd-commands.sh  render-template.sh  set-admin-password.sh  set-instance-rbac.sh
search/: search_index.json
templates/: argocd-application.yml  instance-config.yml
tooling/: .pylintrc  README.md  pyproject.toml
tooling/phd/: config.py  exceptions.py  git.py  kubeconfig.py  kubernetes.py  password.py  utils.py
tooling/phd/cli/: __init__.py  argo_install.py  argo_user_create.py  argo_user_delete.py  argo_user_update.py  cluster_create.py  instance_create.py  instance_delete.py  utils.py
tooling/tests/: config_test.py  kubeconfig_test.py  kubernetes_test.py  password_test.py  test_config.py  test_git.py  test_kubeconfig.py  test_kubernetes.py  test_utils.py  utils_test.py
(+110 files in other folders)
